Fixed typo error

--- a/faq.html
+++ b/faq.html
@@ -104,8 +104,8 @@
                   <li>
                     <input type="checkbox" checked="">
                     <i></i>
-                    <h2>Who are Boats?</h2>
-                    <p>Boats are Creators on BOAT ISLAND</p>
+                    <h2>Who are BOATS?</h2>
+                    <p>BOATS are Creators on BOAT ISLAND</p>
                   </li>
                   <li>
                     <input type="checkbox" checked="">
@@ -267,13 +267,13 @@
               </h3>
 
               <p style="color: #ffffff !important"> BOAT ISLAND VR (BIVR), is a metaverse community for
-                Boats and
-                Islanders. The first multiplayer
+                BOATS and
+                ISLANDERS. The first multiplayer
                 virtual reality platform for Creators.
-                We are building a meta and virtual space where Islanders (Fans) can visit, connect with
+                We are building a meta and virtual space where ISLANDERS (Fans) can visit, connect with
                 each other and
                 enjoy
-                exclusive content and entertainment from different Boats (Creators) around the world.
+                exclusive content and entertainment from different BOATS (Creators) around the world.
                 Our platform is free for our BOAT ISLAND members, others can connect by purchasing a
                 token for access.
               </p>
