--- a/about.html
+++ b/about.html
@@ -75,11 +75,11 @@
             </div>
             <div class="cwp4-text col-lg-6">
               <h3>What Is BOAT ISLAND VR (BIVR)</h3>
-              <p> BOAT ISLAND VR (BIVR), is a metaverse community for Boats and Islanders. The first multiplayer
+              <p> BOAT ISLAND VR (BIVR), is a metaverse community for BOATS and ISLANDERS. The first multiplayer
                 virtual reality platform for Creators.
-                We are building a meta and virtual space where Islanders (Fans) can visit, connect with each other and
+                We are building a meta and virtual space where ISLANDERS (Fans) can visit, connect with each other and
                 enjoy
-                exclusive content and entertainment from different Boats (Creators) around the world.
+                exclusive content and entertainment from different BOATS (Creators) around the world.
                 Our platform is free for our BOAT ISLAND members, others can connect by purchasing a token for access.
               </p>
             </div>
@@ -200,13 +200,13 @@
               </h3>
 
               <p style="color: #ffffff !important"> BOAT ISLAND VR (BIVR), is a metaverse community for
-                Boats and
-                Islanders. The first multiplayer
+                BOATS and
+                ISLANDERS. The first multiplayer
                 virtual reality platform for Creators.
-                We are building a meta and virtual space where Islanders (Fans) can visit, connect with
+                We are building a meta and virtual space where ISLANDERS (Fans) can visit, connect with
                 each other and
                 enjoy
-                exclusive content and entertainment from different Boats (Creators) around the world.
+                exclusive content and entertainment from different BOATS (Creators) around the world.
                 Our platform is free for our BOAT ISLAND members, others can connect by purchasing a
                 token for access.
               </p>
