--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
       <div class="header-section text-center mx-auto">
         <h6 class="sub-title text-capitalize">Join the Wave</h6>
         <img src="assets/images/gl12.png" class="img-fluid" alt="">
-        <p class="my-3"> BOAT ISLAND VR (BIVR), is a metaverse community for Boats and Islanders. The first multiplayer
+        <p class="my-3"> BOAT ISLAND VR (BIVR), is a metaverse community for BOATS and ISLANDERS. The first multiplayer
           virtual reality platform for Creators.
-          We are building a meta and virtual space where Islanders(Fans) can visit, connect with each other and enjoy
-          exclusive content and entertainment from different Boats (Creators) around the world.
+          We are building a meta and virtual space where ISLANDERS(Fans) can visit, connect with each other and enjoy
+          exclusive content and entertainment from different BOATS (Creators) around the world.
           Our platform is free for our BOAT ISLAND members, others can connect by purchasing a token for access. </p>
       </div>
       <!-- customers Section -->
@@ -216,13 +216,13 @@
                     </h3>
 
                     <p style="color: #ffffff !important"> BOAT ISLAND VR (BIVR), is a metaverse community for
-                        Boats and
-                        Islanders. The first multiplayer
+                        BOATS and
+                        ISLANDERS. The first multiplayer
                         virtual reality platform for Creators.
-                        We are building a meta and virtual space where Islanders (Fans) can visit, connect with
+                        We are building a meta and virtual space where ISLANDERS (Fans) can visit, connect with
                         each other and
                         enjoy
-                        exclusive content and entertainment from different Boats (Creators) around the world.
+                        exclusive content and entertainment from different BOATS (Creators) around the world.
                         Our platform is free for our BOAT ISLAND members, others can connect by purchasing a
                         token for access.
                     </p>
