Updated whatsapp number and success notification

--- a/faq.html
+++ b/faq.html
@@ -206,11 +206,11 @@
               </div>
               <div class="contact-info">
                 <div class="icon">
-                  <span class="fa fa-phone" aria-hidden="true"></span>
+                  <span class="fa fa-whatsapp" aria-hidden="true"></span>
                 </div>
                 <div class="contact-details">
-                  <h4>Call or WhatsApp:</h4>
-                  <p><a href="tel:+040-123-456-88">+234-915-566-5555</a></p>
+                  <h4>WhatsApp ONLY:</h4>
+                  <p><i class="fa fa-whatsapp fa-2x text-success"></i></p>
                   <p><a href="tel:+040-123-456-89">+971-58-188-5291</a></p>
                 </div>
               </div>
