--- a/success.html
+++ b/success.html
@@ -76,6 +76,10 @@
                 </div>
                 <img src="assets/images/s8.png" alt="resiser" class="img-fluid">
                 <h4 class="py-2">Your Payment Receipt has been sent to your email</h4>
+                <span class="text-info">NOTE: 
+                    <emp>Your payment reference from Paystack remains as your proof of payment and will be used as your 
+                        Token ID to enter the BIVR Raffle challenge. Keep details private</emp>
+                </span>
             </div>
             <div class="container py-2 text-center">
 
