updated footer text

--- a/faq.html
+++ b/faq.html
@@ -135,7 +135,7 @@
                   <li>
                     <input type="checkbox" checked="">
                     <i></i>
-                    <h2>How can I host an event on BOAT ISLAND metaverse?</h2>
+                    <h2>How can I host an event on BOAT ISLAND Metaverse?</h2>
                     <p>By reaching out to us via email or on our socials.<br>
                       For more enquiries & partnerships, kindly send us an email:<br>
                       <a href='mailto:support@bivr.io'>support@bivr.io</a><br>
@@ -266,10 +266,10 @@
                 <img class="img-fluid" src="assets/images/logo-txt.png" alt="" style="height:25px" />
               </h3>
 
-              <p style="color: #ffffff !important"> BOAT ISLAND VR (BIVR), is a metaverse community for
+              <p style="color: #ffffff !important"> BOAT ISLAND VR (BIVR), is a Metaverse community for
                 BOATS and
                 ISLANDERS. The first multiplayer
-                virtual reality platform for Creators.
+                Virtual Reality platform for Creators.
                 We are building a meta and virtual space where ISLANDERS (Fans) can visit, connect with
                 each other and
                 enjoy
