--- a/p2w.html
+++ b/p2w.html
@@ -85,7 +85,7 @@
                                     </div>
                                     <div class="col-md-8 mt-md-0 mt-5">
                                         <p>
-                                            Play to win IN THE METAVERSE FOR 1 million NAIRA AND A VR OCULUS QUEST 2
+                                            Play to win IN THE Metaverse FOR 1 million NAIRA AND A VR OCULUS QUEST 2
                                             HEADSET. We are celebrating our launch and
                                             have decided to give out prizes to a lucky winner</p>
                                         <a href="register.html"
@@ -107,7 +107,7 @@
                                             <li><span class="fa fa-check"></span>Purchase 2 shell token for
                                                 &#8358;2,000.00 on the bivr webpage</li>
                                             <li><span class="fa fa-check"></span>Stand a grand chance to experience our
-                                                metaverse challenge in virtual reality</li>
+                                                Metaverse challenge in Virtual Reality</li>
                                             <li><span class="fa fa-check"></span>Winner takes all &#8358;1,000,000.00
                                                 plus an Oculus VR Headset</li>
                                         </ul>
@@ -181,10 +181,10 @@
                             <img class="img-fluid" src="assets/images/logo-txt.png" alt="" style="height:25px" />
                         </h3>
     
-                        <p style="color: #ffffff !important"> BOAT ISLAND VR (BIVR), is a metaverse community for
+                        <p style="color: #ffffff !important"> BOAT ISLAND VR (BIVR), is a Metaverse community for
                             BOATS and
                             ISLANDERS. The first multiplayer
-                            virtual reality platform for Creators.
+                            Virtual Reality platform for Creators.
                             We are building a meta and virtual space where ISLANDERS (Fans) can visit, connect with
                             each other and
                             enjoy
