--- a/privacy.html
+++ b/privacy.html
@@ -273,10 +273,10 @@
                                 <img class="img-fluid" src="assets/images/logo-txt.png" alt="" style="height:25px" />
                             </h3>
 
-                            <p style="color: #ffffff !important"> BOAT ISLAND VR (BIVR), is a metaverse community for
+                            <p style="color: #ffffff !important"> BOAT ISLAND VR (BIVR), is a Metaverse community for
                                 BOATS and
                                 ISLANDERS. The first multiplayer
-                                virtual reality platform for Creators.
+                                Virtual Reality platform for Creators.
                                 We are building a meta and virtual space where ISLANDERS (Fans) can visit, connect with
                                 each other and
                                 enjoy
