--- a/about.html
+++ b/about.html
@@ -75,8 +75,8 @@
             </div>
             <div class="cwp4-text col-lg-6">
               <h3>What Is BOAT ISLAND VR (BIVR)</h3>
-              <p> BOAT ISLAND VR (BIVR), is a metaverse community for BOATS and ISLANDERS. The first multiplayer
-                virtual reality platform for Creators.
+              <p> BOAT ISLAND VR (BIVR), is a Metaverse community for BOATS and ISLANDERS. The first multiplayer
+                Virtual Reality platform for Creators.
                 We are building a meta and virtual space where ISLANDERS (Fans) can visit, connect with each other and
                 enjoy
                 exclusive content and entertainment from different BOATS (Creators) around the world.
@@ -199,10 +199,10 @@
                 <img class="img-fluid" src="assets/images/logo-txt.png" alt="" style="height:25px" />
               </h3>
 
-              <p style="color: #ffffff !important"> BOAT ISLAND VR (BIVR), is a metaverse community for
+              <p style="color: #ffffff !important"> BOAT ISLAND VR (BIVR), is a Metaverse community for
                 BOATS and
                 ISLANDERS. The first multiplayer
-                virtual reality platform for Creators.
+                Virtual Reality platform for Creators.
                 We are building a meta and virtual space where ISLANDERS (Fans) can visit, connect with
                 each other and
                 enjoy
