--- a/events.html
+++ b/events.html
@@ -93,7 +93,7 @@
                   <div class="col-md-8 mt-md-0 mt-5">
                     <h3>Play To Win (P2W)</h3>
                     <p>
-                      Play to win IN THE METAVERSE FOR 1 million NAIRA AND A VR OCULUS QUEST 2 HEADSET. We are celebrating our launch and
+                      Play to win IN THE Metaverse FOR 1 million NAIRA AND A VR OCULUS QUEST 2 HEADSET. We are celebrating our launch and
 have decided to give out prizes to a  lucky winner</p>
                     <a href="p2w.html" class="btn btn-outline-primary theme-button mt-3">Go to Event</a>
                   </div>
@@ -112,7 +112,7 @@ have decided to give out prizes to a  lucky winner</p>
                   <div class="col-md-8 mt-md-0 mt-5">
                     <h3>Treasure Hunt</h3>
                     <p>
-                      Play to win IN THE METAVERSE Treasure Hunt challenge.</p>
+                      Play to win IN THE Metaverse Treasure Hunt challenge.</p>
                     <a href="#url" class="btn btn-outline-primary theme-button mt-3">Coming Soon</a>
                   </div>
                 </div>
@@ -159,10 +159,10 @@ have decided to give out prizes to a  lucky winner</p>
                         <img class="img-fluid" src="assets/images/logo-txt.png" alt="" style="height:25px" />
                     </h3>
 
-                    <p style="color: #ffffff !important"> BOAT ISLAND VR (BIVR), is a metaverse community for
+                    <p style="color: #ffffff !important"> BOAT ISLAND VR (BIVR), is a Metaverse community for
                         BOATS and
                         ISLANDERS. The first multiplayer
-                        virtual reality platform for Creators.
+                        Virtual Reality platform for Creators.
                         We are building a meta and virtual space where ISLANDERS (Fans) can visit, connect with
                         each other and
                         enjoy
