--- a/terms.html
+++ b/terms.html
@@ -88,7 +88,7 @@
                         BOAT ISLAND Virtual Reality, powered by <strong>ISLAND LIMITED, RC NO: 1777488</strong> is a
                         unique online platform where content Creators as well as product owners are given the
                         opportunity to sell/market their creative works which are mainly in digital form and connect
-                        virtually on our Virtual Reality Platform or METAVERSE. To that effect, Boat
+                        virtually on our Virtual Reality Platform or Metaverse. To that effect, Boat
                         Island&OpenCurlyQuote;s
                         distributed
                         Data base has been designed to store the following information;
@@ -470,10 +470,10 @@
                                 <img class="img-fluid" src="assets/images/logo-txt.png" alt="" style="height:25px" />
                             </h3>
 
-                            <p style="color: #ffffff !important"> BOAT ISLAND VR (BIVR), is a metaverse community for
+                            <p style="color: #ffffff !important"> BOAT ISLAND VR (BIVR), is a Metaverse community for
                                 BOATS and
                                 ISLANDERS. The first multiplayer
-                                virtual reality platform for Creators.
+                                Virtual Reality platform for Creators.
                                 We are building a meta and virtual space where ISLANDERS (Fans) can visit, connect with
                                 each other and
                                 enjoy
