Secured success page to redirect if no token pass provided - Set a token upo pass

--- a/careers.html
+++ b/careers.html
@@ -128,8 +128,8 @@
                                         transform: translate(-6px, 0);
                                         margin-top: 16px;
                                         right:25px;
-                                        top:0;" class="btn btn-outline-primary">Apply Now</button>
-                                        <h2>Full Stack Developer </h2>
+                                        top:0;" class="btn btn-outline-primary apply">Apply Now</button>
+                                        <h2>Full Stack Developer</h2>
                                         <p>Intrested Candidates for the available position should attach a copy of their
                                             Resume alongside
                                             with other relevant qualification documents (if applicable),
@@ -143,8 +143,22 @@
                                         transform: translate(-6px, 0);
                                         margin-top: 16px;
                                         right:25px;
-                                        top:0;" class="btn btn-outline-primary">Apply Now</button>
-                                        <h2>Business development and brand manager</h2>
+                                        top:0;" class="btn btn-outline-primary apply">Apply Now</button>
+                                        <h2>Business Developer</h2>
+                                        <p>Intrested Candidates should attach a copy of their Resume alongside
+                                            with other relevant qualification documents (if applicable),
+                                            to the following email <a href="mailto:boatislandvr@gmail.com"
+                                                target="_blank">boatislandvr@gmail.com</a>
+                                            Using the Job Title as the subject. </p>
+                                    </li>
+                                    <li class="shadow">
+                                        <input type="checkbox" checked="">
+                                        <button style="position: absolute;
+                                        transform: translate(-6px, 0);
+                                        margin-top: 16px;
+                                        right:25px;
+                                        top:0;" class="btn btn-outline-primary apply">Apply Now</button>
+                                        <h2>Brand Manager</h2>
                                         <p>Intrested Candidates should attach a copy of their Resume alongside
                                             with other relevant qualification documents (if applicable),
                                             to the following email <a href="mailto:boatislandvr@gmail.com"
@@ -158,7 +172,7 @@
                                         transform: translate(-6px, 0);
                                         margin-top: 16px;
                                         right:25px;
-                                        top:0;" class="btn btn-outline-primary">Apply Now</button>
+                                        top:0;" class="btn btn-outline-primary apply">Apply Now</button>
                                         <h2>VR/AR developer</h2>
                                         <p>Intrested Candidates should attach a copy of their Resume alongside
                                             with other relevant qualification documents (if applicable),
@@ -173,7 +187,7 @@
                                         transform: translate(-6px, 0);
                                         margin-top: 16px;
                                         right:25px;
-                                        top:0;" class="btn btn-outline-primary">Apply Now</button>
+                                        top:0;" class="btn btn-outline-primary apply">Apply Now</button>
                                         <h2>Customer Instructor</h2>
                                         <p>Intrested Candidates should attach a copy of their Resume alongside
                                             with other relevant qualification documents (if applicable),
@@ -188,8 +202,8 @@
                                         transform: translate(-6px, 0);
                                         margin-top: 16px;
                                         right:25px;
-                                        top:0;" class="btn btn-outline-primary">Apply Now</button>
-                                        <h2>VR influencer and guide</h2>
+                                        top:0;" class="btn btn-outline-primary apply">Apply Now</button>
+                                        <h2>VR Influencer/Guide</h2>
                                         <p>Intrested Candidates should attach a copy of their Resume alongside
                                             with other relevant qualification documents (if applicable),
                                             to the following email <a href="mailto:boatislandvr@gmail.com"
@@ -203,8 +217,8 @@
                                         transform: translate(-6px, 0);
                                         margin-top: 16px;
                                         right:25px;
-                                        top:0;" class="btn btn-outline-primary">Apply Now</button>
-                                        <h2>Social media and community manager</h2>
+                                        top:0;" class="btn btn-outline-primary apply">Apply Now</button>
+                                        <h2>Social Media Manager</h2>
                                         <p>Intrested Candidates should attach a copy of their Resume alongside
                                             with other relevant qualification documents (if applicable),
                                             to the following email <a href="mailto:boatislandvr@gmail.com"
@@ -218,8 +232,8 @@
                                         transform: translate(-6px, 0);
                                         margin-top: 16px;
                                         right:25px;
-                                        top:0;" class="btn btn-outline-primary">Apply Now</button>
-                                        <h2>Customer support</h2>
+                                        top:0;" class="btn btn-outline-primary apply">Apply Now</button>
+                                        <h2>Customer Support</h2>
                                         <p>Intrested Candidates should attach a copy of their Resume alongside
                                             with other relevant qualification documents (if applicable),
                                             to the following email <a href="mailto:boatislandvr@gmail.com"
