Typography - Updated Text logo to white - Changed margin and padding for index page - fixed the z-index for the carosel

--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
   <main>
     <!-- /about breadcrumbs -->
     <section class="w3l-about1" id="about">
-      <div id="content-with-photo4-block" class="pt-5">
+      <div id="content-with-photo4-block">
         <div class="container py-md-3">
           <div class="header-section mb-5 text-center">
           </div>
@@ -120,8 +120,8 @@
         <div class="container py-lg-5">
           <div class="middle-section text-center">
             <div class="header-section text-center mx-auto">
-              <h6 class="sub-title">Explore The BOAT ISLAND</h6>
-              <h3>Take a Tour Round the Island</h3>
+              <h6 class="sub-title">Take a Tour Round the Island</h6>
+              <h3>Explore The BOAT ISLAND</h3>
             </div>
             <div class="history-info mt-5">
               <div class="position-relative">
@@ -142,7 +142,7 @@
             <div class="mt-5 request-quote">
               <!-- request a demo form popup -->
               <a type="button" class="btn btn-primary theme-button" href="register.html">
-                Download
+                register now
               </a>
 
               <!-- Modal -->
@@ -196,7 +196,7 @@
             <div class="col-lg-6 col-md-12 column pl-lg-5 column4 mt-lg-0 mt-5">
               <h3 style="display: inline-block"><img class="img-fluid" src="assets/images/logo.png" alt=""
                   style="height:25px" />
-                <img class="img-fluid" src="assets/images/logo-txt.png" alt="" style="height:25px" />
+                <img class="img-fluid logo-text" src="assets/images/logo-txt.png" alt="" />
               </h3>
 
               <p style="color: #ffffff !important"> BOAT ISLAND VR (BIVR), is a Metaverse community for
