--- a/events.html
+++ b/events.html
@@ -93,8 +93,8 @@
                   <div class="col-md-8 mt-md-0 mt-5">
                     <h3>Play To Win (P2W)</h3>
                     <p>
-                      Play to win IN THE Metaverse FOR 1 million NAIRA AND A VR OCULUS QUEST 2 HEADSET. We are celebrating our launch and
-have decided to give out prizes to a  lucky winner</p>
+                      Play to win in the Metaverse for 1 Million Naira and a VR OCULUS QUEST 2 HEADSET. We are celebrating our launch and
+have decided to give out prizes to a lucky winner</p>
                     <a href="p2w.html" class="btn btn-outline-primary theme-button mt-3">Go to Event</a>
                   </div>
                 </div>
@@ -112,7 +112,7 @@ have decided to give out prizes to a  lucky winner</p>
                   <div class="col-md-8 mt-md-0 mt-5">
                     <h3>Treasure Hunt</h3>
                     <p>
-                      Play to win IN THE Metaverse Treasure Hunt challenge.</p>
+                      Play to win in the Metaverse Treasure Hunt challenge.</p>
                     <a href="#url" class="btn btn-outline-primary theme-button mt-3">Coming Soon</a>
                   </div>
                 </div>
@@ -156,7 +156,7 @@ have decided to give out prizes to a  lucky winner</p>
                 <div class="col-lg-6 col-md-12 column pl-lg-5 column4 mt-lg-0 mt-5">
                     <h3 style="display: inline-block"><img class="img-fluid" src="assets/images/logo.png" alt=""
                             style="height:25px" />
-                        <img class="img-fluid" src="assets/images/logo-txt.png" alt="" style="height:25px" />
+                        <img class="img-fluid logo-text" src="assets/images/logo-txt.png" alt=""/>
                     </h3>
 
                     <p style="color: #ffffff !important"> BOAT ISLAND VR (BIVR), is a Metaverse community for
