--- a/faq.html
+++ b/faq.html
@@ -139,7 +139,7 @@
                     <p>By reaching out to us via email or on our socials.<br>
                       For more enquiries & partnerships, kindly send us an email:<br>
                       <a href='mailto:support@bivr.io'>support@bivr.io</a><br>
-                      <a href='mailto:boatIslandVR@gmail.com'>boatislandvr@gmail.com</a><br>
+                      <a href='mailto:boatIslandvr@gmail.com'>boatislandvr@gmail.com</a><br>
                     </p>
                   </li>
                 </ul>
@@ -263,7 +263,7 @@
             <div class="col-lg-6 col-md-12 column pl-lg-5 column4 mt-lg-0 mt-5">
               <h3 style="display: inline-block"><img class="img-fluid" src="assets/images/logo.png" alt=""
                   style="height:25px" />
-                <img class="img-fluid" src="assets/images/logo-txt.png" alt="" style="height:25px" />
+                <img class="img-fluid logo-text" src="assets/images/logo-txt.png" alt=""/>
               </h3>
 
               <p style="color: #ffffff !important"> BOAT ISLAND VR (BIVR), is a Metaverse community for
