--- a/terms.html
+++ b/terms.html
@@ -64,7 +64,8 @@
     <!-- contact breadcrumbs -->
     <nav id="breadcrumbs" class="breadcrumbs">
         <div class="container page-wrapper">
-            <a href="https://bivr.io">Home</a> » <span class="breadcrumb_last" aria-current="page">Terms & Conditions</span>
+            <a href="https://bivr.io">Home</a> » <span class="breadcrumb_last" aria-current="page">Terms &
+                Conditions</span>
         </div>
     </nav>
     <!-- /contact breadcrumbs -->
@@ -467,7 +468,7 @@
                         <div class="col-lg-6 col-md-12 column pl-lg-5 column4 mt-lg-0 mt-5">
                             <h3 style="display: inline-block"><img class="img-fluid" src="assets/images/logo.png" alt=""
                                     style="height:25px" />
-                                <img class="img-fluid" src="assets/images/logo-txt.png" alt="" style="height:25px" />
+                                <img class="img-fluid logo-text" src="assets/images/logo-txt.png" alt=""/>
                             </h3>
 
                             <p style="color: #ffffff !important"> BOAT ISLAND VR (BIVR), is a Metaverse community for
