--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
       <div class="container py-lg-5">
         <div class="middle-section text-center">
           <div class="header-section text-center mx-auto">
-            <h6 class="sub-title">Explore The BOAT ISLAND</h6>
-            <h3>Take a Tour Round the Island</h3>
+            <h6 class="sub-title">Take a Tour Round the Island</h6>
+            <h3>Explore The BOAT ISLAND</h3>
           </div>
           <div class="history-info mt-5">
             <div class="position-relative">
@@ -172,7 +172,7 @@
               &#8358;1,000,000 and <br>an Oculus Quest II VR Headset.
             </p>
             <a href="register.html" class="btn btn-light theme-button" style="border-radius: 40px; 
-            color: #fff; background: #ab07d4; border: none;">Download Now</a>
+            color: #fff; background: #ab07d4; border: none;">Register Now</a>
           </div>
         </div>
       </div>
@@ -212,7 +212,7 @@
                 <div class="col-lg-6 col-md-12 column pl-lg-5 column4 mt-lg-0 mt-5">
                     <h3 style="display: inline-block"><img class="img-fluid" src="assets/images/logo.png" alt=""
                             style="height:25px" />
-                        <img class="img-fluid" src="assets/images/logo-txt.png" alt="" style="height:25px" />
+                        <img class="img-fluid logo-text" src="assets/images/logo-txt.png" alt="" />
                     </h3>
 
                     <p style="color: #ffffff !important"> BOAT ISLAND VR (BIVR), is a Metaverse community for
