--- a/privacy.html
+++ b/privacy.html
@@ -270,7 +270,7 @@
                         <div class="col-lg-6 col-md-12 column pl-lg-5 column4 mt-lg-0 mt-5">
                             <h3 style="display: inline-block"><img class="img-fluid" src="assets/images/logo.png" alt=""
                                     style="height:25px" />
-                                <img class="img-fluid" src="assets/images/logo-txt.png" alt="" style="height:25px" />
+                                <img class="img-fluid logo-text" src="assets/images/logo-txt.png" alt=""/>
                             </h3>
 
                             <p style="color: #ffffff !important"> BOAT ISLAND VR (BIVR), is a Metaverse community for
