--- a/success.html
+++ b/success.html
@@ -12,6 +12,12 @@
     <!-- web fonts -->
     <link href="//fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700;800;900&display=swap"
         rel="stylesheet">
+    <script>
+        let txID = localStorage.getItem('txID');
+        if (!txID) {
+            location.href = 'failed.html'
+        }
+    </script>
 </head>
 
 <body>
@@ -124,7 +130,7 @@
                         <div class="col-lg-6 col-md-12 column pl-lg-5 column4 mt-lg-0 mt-5">
                             <h3 style="display: inline-block"><img class="img-fluid" src="assets/images/logo.png" alt=""
                                     style="height:25px" />
-                                <img class="img-fluid" src="assets/images/logo-txt.png" alt="" style="height:25px" />
+                                <img class="img-fluid logo-text" src="assets/images/logo-txt.png" alt=""/>
                             </h3>
 
                             <p style="color: #ffffff !important"> BOAT ISLAND VR (BIVR), is a Metaverse community for
@@ -236,14 +242,6 @@
                 }
             });
         });
-    </script>
-    <script>
-        $(window).on('load', () => {
-            let txID = localStorage.getItem('txID');
-            if (!txID) {
-                $('html').load('failed.html')
-            }
-        })
     </script>
 
 
