--- a/p2w.html
+++ b/p2w.html
@@ -121,7 +121,7 @@
                                                 or updates</li>
                                             <li><span class="fa fa-check"></span>A subscriber can purchase a minimum of
                                                 2 tokens and maximum of 10 tokens</li>
-                                            <li><span class="fa fa-check"></span>A subscriber must be Computer Literate and enjoys gaming</li>
+                                            <li><span class="fa fa-check"></span>A subscriber must be computer literate and enjoys gaming</li>
                                         </ul>
                                         <p>
                                             <a href="https://www.facebook.com/BoatIsland/" target="_blank"><span class="fa fa-facebook ml fa-2x"></span></a>
