Undo changed from the last 3 commits

--- a/p2w.html
+++ b/p2w.html
@@ -85,8 +85,8 @@
                                     </div>
                                     <div class="col-md-8 mt-md-0 mt-5">
                                         <p>
-                                            Play to win IN THE Metaverse FOR 1 million NAIRA AND A VR OCULUS QUEST 2
-                                            HEADSET. We are celebrating our launch and
+                                            Play to win in the Metaverse for 1 Million Naira and a VR OCULUS QUEST 2
+                                            headset. We are celebrating our launch and
                                             have decided to give out prizes to a lucky winner</p>
                                         <a href="register.html"
                                             class="btn btn-outline-primary theme-button mt-3 text-capitalize">Register
