--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
       </div>
     </section>
     <section class="w3l-about1" id="about">
-      <div id="content-with-photo4-block" class="pt-5">
+      <div id="content-with-photo4-block">
         <div class="container py-md-3">
           <div class="header-section mb-5 text-center">
           </div>
