Changed Typograhy 'Metaverse to metaverse'

--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
             </div>
             <div class="cwp4-text col-lg-6 mt-5">
               <h3>What Is BOAT ISLAND VR (BIVR)</h3>
-              <p> BOAT ISLAND VR (BIVR), is a Metaverse community for BOATS and ISLANDERS. The first multiplayer
+              <p> BOAT ISLAND VR (BIVR), is a metaverse community for BOATS and ISLANDERS. The first multiplayer
                 Virtual Reality platform for Creators.
                 We are building a meta and virtual space where ISLANDERS (Fans) can visit, connect with each other and
                 enjoy
@@ -199,7 +199,7 @@
                 <img class="img-fluid logo-text" src="assets/images/logo-txt.png" alt="" />
               </h3>
 
-              <p style="color: #ffffff !important"> BOAT ISLAND VR (BIVR), is a Metaverse community for
+              <p style="color: #ffffff !important"> BOAT ISLAND VR (BIVR), is a metaverse community for
                 BOATS and
                 ISLANDERS. The first multiplayer
                 Virtual Reality platform for Creators.
