--- a/events.html
+++ b/events.html
@@ -93,7 +93,7 @@
                   <div class="col-md-8 mt-md-0 mt-5">
                     <h3>Play To Win (P2W)</h3>
                     <p>
-                      Play to win in the Metaverse for 1 Million Naira and a VR OCULUS QUEST 2 HEADSET. We are celebrating our launch and
+                      Play to win in the metaverse for 1 Million Naira and a VR OCULUS QUEST 2 HEADSET. We are celebrating our launch and
 have decided to give out prizes to a lucky winner</p>
                     <a href="p2w.html" class="btn btn-outline-primary theme-button mt-3">Go to Event</a>
                   </div>
@@ -112,7 +112,7 @@ have decided to give out prizes to a lucky winner</p>
                   <div class="col-md-8 mt-md-0 mt-5">
                     <h3>Treasure Hunt</h3>
                     <p>
-                      Play to win in the Metaverse Treasure Hunt challenge.</p>
+                      Play to win in the metaverse Treasure Hunt challenge.</p>
                     <a href="#url" class="btn btn-outline-primary theme-button mt-3">Coming Soon</a>
                   </div>
                 </div>
@@ -159,7 +159,7 @@ have decided to give out prizes to a lucky winner</p>
                         <img class="img-fluid logo-text" src="assets/images/logo-txt.png" alt=""/>
                     </h3>
 
-                    <p style="color: #ffffff !important"> BOAT ISLAND VR (BIVR), is a Metaverse community for
+                    <p style="color: #ffffff !important"> BOAT ISLAND VR (BIVR), is a metaverse community for
                         BOATS and
                         ISLANDERS. The first multiplayer
                         Virtual Reality platform for Creators.
