--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <div class="header-section text-center mx-auto">
         <h6 class="sub-title text-capitalize">Join the Wave</h6>
         <img src="assets/images/gl12.png" class="img-fluid" alt="">
-        <p class="my-3"> BOAT ISLAND VR (BIVR), is a Metaverse community for BOATS and ISLANDERS. The first multiplayer
+        <p class="my-3"> BOAT ISLAND VR (BIVR), is a metaverse community for BOATS and ISLANDERS. The first multiplayer
           Virtual Reality platform for Creators.
           We are building a meta and virtual space where ISLANDERS (Fans) can visit, connect with each other and enjoy
           exclusive content and entertainment from different BOATS (Creators) around the world.
@@ -168,7 +168,7 @@
             <h2 style="font-size: 2.5em">PLAY 2 WIN (P2W)</h2>
           </div>
           <div class="link-list-menu">
-            <p class="mt-md-4 mt-3 mb-md-5 mb-4">Play In the Metaverse to stand a chance to win
+            <p class="mt-md-4 mt-3 mb-md-5 mb-4">Play In the metaverse to stand a chance to win
               &#8358;1,000,000 and <br>an Oculus Quest II VR Headset.
             </p>
             <a href="register.html" class="btn btn-light theme-button" style="border-radius: 40px; 
@@ -215,7 +215,7 @@
                         <img class="img-fluid logo-text" src="assets/images/logo-txt.png" alt="" />
                     </h3>
 
-                    <p style="color: #ffffff !important"> BOAT ISLAND VR (BIVR), is a Metaverse community for
+                    <p style="color: #ffffff !important"> BOAT ISLAND VR (BIVR), is a metaverse community for
                         BOATS and
                         ISLANDERS. The first multiplayer
                         Virtual Reality platform for Creators.
