--- a/p2w.html
+++ b/p2w.html
@@ -85,7 +85,7 @@
                                     </div>
                                     <div class="col-md-8 mt-md-0 mt-5">
                                         <p>
-                                            Play to win in the Metaverse for 1 Million Naira and a VR OCULUS QUEST 2
+                                            Play to win in the metaverse for 1 Million Naira and a VR OCULUS QUEST 2
                                             headset. We are celebrating our launch and
                                             have decided to give out prizes to a lucky winner</p>
                                         <a href="register.html"
@@ -107,7 +107,7 @@
                                             <li><span class="fa fa-check"></span>Purchase 2 shell token for
                                                 &#8358;2,000.00 on the bivr webpage</li>
                                             <li><span class="fa fa-check"></span>Stand a grand chance to experience our
-                                                Metaverse challenge in Virtual Reality</li>
+                                                metaverse challenge in Virtual Reality</li>
                                             <li><span class="fa fa-check"></span>Winner takes all &#8358;1,000,000.00
                                                 plus an Oculus VR Headset</li>
                                         </ul>
@@ -181,7 +181,7 @@
                             <img class="img-fluid logo-text" src="assets/images/logo-txt.png" alt=""/>
                         </h3>
     
-                        <p style="color: #ffffff !important"> BOAT ISLAND VR (BIVR), is a Metaverse community for
+                        <p style="color: #ffffff !important"> BOAT ISLAND VR (BIVR), is a metaverse community for
                             BOATS and
                             ISLANDERS. The first multiplayer
                             Virtual Reality platform for Creators.
