--- a/register.html
+++ b/register.html
@@ -153,7 +153,7 @@
                                 <img class="img-fluid logo-text" src="assets/images/logo-txt.png" alt=""/>
                             </h3>
 
-                            <p style="color: #ffffff !important"> BOAT ISLAND VR (BIVR), is a Metaverse community for
+                            <p style="color: #ffffff !important"> BOAT ISLAND VR (BIVR), is a metaverse community for
                                 BOATS and
                                 ISLANDERS. The first multiplayer
                                 Virtual Reality platform for Creators.
