--- a/terms.html
+++ b/terms.html
@@ -89,7 +89,7 @@
                         BOAT ISLAND Virtual Reality, powered by <strong>ISLAND LIMITED, RC NO: 1777488</strong> is a
                         unique online platform where content Creators as well as product owners are given the
                         opportunity to sell/market their creative works which are mainly in digital form and connect
-                        virtually on our Virtual Reality Platform or Metaverse. To that effect, Boat
+                        virtually on our Virtual Reality Platform or metaverse. To that effect, Boat
                         Island&OpenCurlyQuote;s
                         distributed
                         Data base has been designed to store the following information;
@@ -471,7 +471,7 @@
                                 <img class="img-fluid logo-text" src="assets/images/logo-txt.png" alt=""/>
                             </h3>
 
-                            <p style="color: #ffffff !important"> BOAT ISLAND VR (BIVR), is a Metaverse community for
+                            <p style="color: #ffffff !important"> BOAT ISLAND VR (BIVR), is a metaverse community for
                                 BOATS and
                                 ISLANDERS. The first multiplayer
                                 Virtual Reality platform for Creators.
