--- a/faq.html
+++ b/faq.html
@@ -135,7 +135,7 @@
                   <li>
                     <input type="checkbox" checked="">
                     <i></i>
-                    <h2>How can I host an event on BOAT ISLAND Metaverse?</h2>
+                    <h2>How can I host an event on BOAT ISLAND metaverse?</h2>
                     <p>By reaching out to us via email or on our socials.<br>
                       For more enquiries & partnerships, kindly send us an email:<br>
                       <a href='mailto:support@bivr.io'>support@bivr.io</a><br>
@@ -266,7 +266,7 @@
                 <img class="img-fluid logo-text" src="assets/images/logo-txt.png" alt=""/>
               </h3>
 
-              <p style="color: #ffffff !important"> BOAT ISLAND VR (BIVR), is a Metaverse community for
+              <p style="color: #ffffff !important"> BOAT ISLAND VR (BIVR), is a metaverse community for
                 BOATS and
                 ISLANDERS. The first multiplayer
                 Virtual Reality platform for Creators.
