fixed typography errors

--- a/events.html
+++ b/events.html
@@ -163,7 +163,7 @@ have decided to give out prizes to a lucky winner</p>
                         BOATS and
                         ISLANDERS. The first multiplayer
                         Virtual Reality platform for Creators.
-                        We are building a meta and virtual space where ISLANDERS (Fans) can visit, connect with
+                        We are building a metaverse and virtual space where ISLANDERS (Fans) can visit, connect with
                         each other and
                         enjoy
                         exclusive content and entertainment from different BOATS (Creators) around the world.
