--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
               <h3>What Is BOAT ISLAND VR (BIVR)</h3>
               <p> BOAT ISLAND VR (BIVR), is a metaverse community for BOATS and ISLANDERS. The first multiplayer
                 Virtual Reality platform for Creators.
-                We are building a meta and virtual space where ISLANDERS (Fans) can visit, connect with each other and
+                We are building a metaverse and virtual space where ISLANDERS (Fans) can visit, connect with each other and
                 enjoy
                 exclusive content and entertainment from different BOATS (Creators) around the world.
                 Our platform is free for our BOAT ISLAND members, others can connect by purchasing a token for access.
@@ -203,7 +203,7 @@
                 BOATS and
                 ISLANDERS. The first multiplayer
                 Virtual Reality platform for Creators.
-                We are building a meta and virtual space where ISLANDERS (Fans) can visit, connect with
+                We are building a metaverse and virtual space where ISLANDERS (Fans) can visit, connect with
                 each other and
                 enjoy
                 exclusive content and entertainment from different BOATS (Creators) around the world.
