--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <img src="assets/images/gl12.png" class="img-fluid" alt="">
         <p class="my-3"> BOAT ISLAND VR (BIVR), is a metaverse community for BOATS and ISLANDERS. The first multiplayer
           Virtual Reality platform for Creators.
-          We are building a meta and virtual space where ISLANDERS (Fans) can visit, connect with each other and enjoy
+          We are building a metaverse and virtual space where ISLANDERS (Fans) can visit, connect with each other and enjoy
           exclusive content and entertainment from different BOATS (Creators) around the world.
           Our platform is free for our BOAT ISLAND members, others can connect by purchasing a token for access. </p>
       </div>
@@ -219,7 +219,7 @@
                         BOATS and
                         ISLANDERS. The first multiplayer
                         Virtual Reality platform for Creators.
-                        We are building a meta and virtual space where ISLANDERS (Fans) can visit, connect with
+                        We are building a metaverse and virtual space where ISLANDERS (Fans) can visit, connect with
                         each other and
                         enjoy
                         exclusive content and entertainment from different BOATS (Creators) around the world.
