--- a/p2w.html
+++ b/p2w.html
@@ -185,7 +185,7 @@
                             BOATS and
                             ISLANDERS. The first multiplayer
                             Virtual Reality platform for Creators.
-                            We are building a meta and virtual space where ISLANDERS (Fans) can visit, connect with
+                            We are building a metaverse and virtual space where ISLANDERS (Fans) can visit, connect with
                             each other and
                             enjoy
                             exclusive content and entertainment from different BOATS (Creators) around the world.
