--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
               <img src="assets/images/bg.jpg" class="img-fluid img-curve video-popup-image" alt="video-popup">
 
               <a href="#small-dialog" class="popup-with-zoom-anim play-view text-center position-absolute">
-                <span class="video-play-icon">
-                  <span class="fa fa-play"></span>
+                <span class="video-play-icn">
+                  <span class="fa fa-youtube-play fa-4x text-danger"></span>
                 </span>
               </a>
               <div id="small-dialog" class="zoom-anim-dialog mfp-hide">
