--- a/success.html
+++ b/success.html
@@ -81,12 +81,16 @@
                 <div class="header-section mx-auto">
                     <h3>Your Registration was Sucessfull </h3>
                 </div>
-                <img src="assets/images/s8.png" alt="resiser" class="img-fluid">
+                <!-- <img src="assets/images/s8.png" alt="resiser" class="img-fluid"> -->
                 <h4 class="py-2">Your Payment Receipt has been sent to your email</h4>
-                <span class="text-info">NOTE:
-                    <emp>Your payment reference from Paystack remains as your proof of payment and will be used as your
-                        Token ID to enter the BIVR Raffle challenge. Keep details private</emp>
-                </span>
+                <p>
+                    <h4 class="text-info">NOTE:
+                    <emp>Your payment reference from Paystack (BIVRxxxx) remains as your proof of payment and will be used as your Token ID to enter the BIVR Raffle challenge. 
+                        Keep details private.</emp>
+                </h4>
+                </p>
+                <p class="py-2">If you have any questions or concerns, please do not hesitate to contact us.</p>
+                
             </div>
             <div class="container py-2 text-center">
 
