--- a/support.html
+++ b/support.html
@@ -76,7 +76,7 @@
                     <div class="middle-section text-center">
                         <div class="header-section text-center mx-auto">
                             <!-- <h6 class="sub-title">Explore The BOAT ISLAND</h6> -->
-                            <h3>Video Description</h3>
+                            <h3>How To Side Load BIVR On Your Oculus Quest 2</h3>
                         </div>
                         <div class="history-info mt-5">
                             <div class="position-relative">
@@ -85,8 +85,8 @@
 
                                 <a href="#small-dialog"
                                     class="popup-with-zoom-anim play-view text-center position-absolute">
-                                    <span class="video-play-icon">
-                                        <span class="fa fa-play"></span>
+                                    <span class="video-play-icn">
+                                        <span class="fa fa-youtube-play fa-4x text-danger"></span>
                                     </span>
                                 </a>
 
@@ -110,41 +110,37 @@
                 <div class="header-section py-lg-5">
                     <h3>User Flow</h3>
                 </div>
-                <p class="py-2">Once the App loads users will enter a login scene</p>
-                <p class="py-2"><strong>Login Scene: </strong>In the Login scene A user will choose to either login
-                    anonymouslyor with an
-                    ID with with other users can ldentify you.
-                    Once loggedin you will enter the.</p>
+                <p class="py-2"><strong>Intro:</strong> Once the App loads users will enter a Login scene</p>
+                <p class="py-2"><strong>Login Scene: </strong>n the Login scene, a user will choose to either login
+                    anonymously or with an ID so other users can ldentify you. Once logged in, you will enter the next
+                    scene...</p>
                 <p class="py-2"><strong>Home Scene:</strong> In the home scene there is an Avatar selector and UI setup
-                    forjoining
-                    Rooms/Worlds. We currently have three worlds in the BIVRalpha. the Island Boat,Island Sky and Game
-                    room.</p>
-                <p class="py-2"><strong>Island Boat:</strong> Starts on a boat sailing towards an island, once the boat
-                    docks auser can
-                    exit onto the Island(this scene is mainly to show the boatcruise capability)</p>
-                <p class="py-2">Island Sky: This is the main world in the BIVR alpha,it is the same island onthe island
-                    boat but it is better configured for exploration, it startup in the sky on the wing of an aircraft
-                    the user jumps off for askydiving experience onto the island to explore all the different
-                    attractions.</p>
-                <p class="py-2"><strong>Game Room:</strong> This room is aprivate room with maximum occupancy of
-                    twousers, once a user
-                    joins the room with a friend they can voice chatwhile playing the the different games and props.
+                    for joining Rooms/Worlds. We currently have three worlds in the BIVR alpha;
+                    (a) The Island Boat, (b) Island Sky and (c) Game room.</p>
+                <p class="py-2"><strong>Island Boat:</strong> Starts on a Boat sailing towards an Island, once the Boat
+                    docks a user can exit onto the Island (this scene is mainly to show the Boat cruise capability).</p>
+                <p class="py-2"><strong>Island Sky:</strong>This is the main world in the BIVR alpha, it is the same
+                    Island on the Island Boat but it is better configured for exploration, it starts up with a sky jump
+                    experience on the wing of an aircraft onto the Island to explore all the different attractions.</p>
+                <p class="py-2"><strong>Game Room:</strong> This room is a private room with maximum occupancy of two
+                    users, once a user joins the room with a friend they can voice chat while playing different games
+                    and others.
                 </p>
             </div>
         </section>
         <section class="container w3l-about1 py-lg-5">
             <div class="header-section py-lg-5 text-center">
-                <h3>User Flow</h3>
+                <h3>Functions</h3>
             </div>
             <div class="cwp4-text col-lg-6">
                 <ul class="cont-4">
-                  <li><span class="fa fa-check"></span>Education & Training</li>
-                  <li><span class="fa fa-check"></span>Utilities & Reference</li>
-                  <li><span class="fa fa-check"></span>Social & Networking</li>
-                  <li><span class="fa fa-check"></span>Media &Entertainment</li>
-                  <li><span class="fa fa-check"></span>Productivity and collaboration</li>
-                  <li><span class="fa fa-check"></span>Gaming</li>
-                  <li><span class="fa fa-check"></span>Art & Creativity </li>
+                    <li><span class="fa fa-check"></span>Education & Training</li>
+                    <li><span class="fa fa-check"></span>Utilities & Reference</li>
+                    <li><span class="fa fa-check"></span>Social & Networking</li>
+                    <li><span class="fa fa-check"></span>Media & Entertainment</li>
+                    <li><span class="fa fa-check"></span>Productivity and collaboration</li>
+                    <li><span class="fa fa-check"></span>Gaming</li>
+                    <li><span class="fa fa-check"></span>Art & Creativity </li>
                 </ul>
             </div>
         </section>
@@ -154,16 +150,16 @@
                     <h3>BIVR Features</h3>
                 </div>
 
-            <div class="cwp4-text col-lg-6">
-                <ul class="cont-4">
-                  <li><span class="fa fa-check"></span>Boat House Party Area (Private & Public)</li>
-                  <li><span class="fa fa-check"></span>Island landscape with vegetation and wild Life</li>
-                  <li><span class="fa fa-check"></span>Play room with board games</li>
-                  <li><span class="fa fa-check"></span>Boat Tour across the Island</li>
-                  <li><span class="fa fa-check"></span>A sky diving experience</li>
-                  <li><span class="fa fa-check"></span>Paint balling on the Island</li>
-                </ul>
-            </div>
+                <div class="cwp4-text col-lg-6">
+                    <ul class="cont-4">
+                        <li><span class="fa fa-check"></span>Boat House Party Area (Private & Public)</li>
+                        <li><span class="fa fa-check"></span>Island landscape with vegetation & wildlife</li>
+                        <li><span class="fa fa-check"></span>Play room with board games</li>
+                        <li><span class="fa fa-check"></span>Boat Tour across the Island</li>
+                        <li><span class="fa fa-check"></span>A sky diving experience</li>
+                        <li><span class="fa fa-check"></span>Paint balling on the Island</li>
+                    </ul>
+                </div>
             </div>
         </section>
         <section>
@@ -244,14 +240,15 @@
                         <div class="col-lg-6 col-md-12 column pl-lg-5 column4 mt-lg-0 mt-5">
                             <h3 style="display: inline-block"><img class="img-fluid" src="assets/images/logo.png" alt=""
                                     style="height:25px" />
-                                <img class="img-fluid logo-text" src="assets/images/logo-txt.png" alt=""/>
+                                <img class="img-fluid logo-text" src="assets/images/logo-txt.png" alt="" />
                             </h3>
 
                             <p style="color: #ffffff !important"> BOAT ISLAND VR (BIVR), is a metaverse community for
                                 BOATS and
                                 ISLANDERS. The first multiplayer
                                 Virtual Reality platform for Creators.
-                                We are building a metaverse and virtual space where ISLANDERS (Fans) can visit, connect with
+                                We are building a metaverse and virtual space where ISLANDERS (Fans) can visit, connect
+                                with
                                 each other and
                                 enjoy
                                 exclusive content and entertainment from different BOATS (Creators) around the world.
